--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.3",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.25.23"
